--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "class-variance-authority": "^0.7.0",
+    "firebase": "^10.5.2",
     "lucide-react": "^0.290.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
