--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^1.14.0",
+    "tailwindcss-animated": "^1.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
