warehouse preview page

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@nextui-org/react": "^2.2.9",
     "@tailwindcss/forms": "^0.5.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,10 +13,15 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "firebase": "^10.5.2",
+    "flowbite-react": "^0.6.4",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.290.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
