--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "firebase": "^10.5.2",
     "flowbite-react": "^0.6.4",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.290.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
